DBZ-8054 Refactor removeEventWithRowId to reduce scans of events